--- a/Website/Pages/Counter.razor
+++ b/Website/Pages/Counter.razor
@@ -6,7 +6,9 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+@* <button class="btn btn-primary" @onclick="IncrementCount">Click me</button> *@
+
+<Button></Button>
 
 @code {
     private int currentCount = 0;
